--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="twitch">#6441a5</color>
     <color name="status">#553dbd</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
