--- a/app/src/main/res/layout/stream_item.xml
+++ b/app/src/main/res/layout/stream_item.xml
@@ -1,18 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginEnd="8dp"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
 
 
+        <ImageView
+            android:id="@+id/imgPreview"
+            android:layout_width="110dp"
+            android:layout_height="60dp"
+            app:srcCompat="@drawable/test" />
 
+        <ImageView
+            android:id="@+id/imgLogo"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:layout_alignTop="@+id/imgPreview"
+            android:layout_toEndOf="@+id/imgPreview"
+            app:srcCompat="@drawable/testlogo" />
+
+        <TextView
+            android:id="@+id/txChannel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/imgPreview"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@+id/imgLogo"
+            android:layout_toRightOf="@+id/imgLogo"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/txGame"
+            android:layout_below="@+id/imgLogo"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="4dp"
+            android:layout_toEndOf="@+id/imgPreview"
+            android:layout_toRightOf="@+id/imgPreview"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/txGame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imgPreview"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_toEndOf="@+id/imgPreview"
+            android:text="TextView"
+            android:textSize="11sp" />
+
+        <ImageView
+            android:id="@+id/imgDot"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_alignStart="@+id/imgPreview"
+            android:layout_alignBottom="@+id/imgPreview"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"
+            app:srcCompat="@drawable/ic_dot" />
+
+        <TextView
+            android:id="@+id/txViewer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imgPreview"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="3dp"
+            android:layout_toEndOf="@+id/imgDot"
+            android:text="TextView"
+            android:textColor="@color/white"
+            android:textSize="11sp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
