--- a/app/src/main/res/layout/fragment_stream.xml
+++ b/app/src/main/res/layout/fragment_stream.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="20dp"
+            android:layoutAnimation="@anim/layout_animation_fall_down"
             android:paddingBottom="3dp" />
     </LinearLayout>
 
